Add stubs and client sub-projects