@@ -7,7 +7,7 @@
 	<groupId>io.github.learnjaxrs</groupId>
 	<artifactId>learn-webservices-jaxrs</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>pom</packaging>
 
 	<name>learn-webservices-jaxrs</name>
 	<description>JAX-RS API</description>
@@ -15,7 +15,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.4</version>
+		<version>3.2.5</version>
 	</parent>
 
 	<properties>
@@ -24,208 +24,16 @@
 		<jakartaee.version>10.0.0</jakartaee.version>
 		<microprofile.version>5.0</microprofile.version>
 
-		<!-- https://github.com/OpenLiberty/ci.maven -->
-		<liberty-maven-plugin.version>3.10.2</liberty-maven-plugin.version>
-		<liberty-runtime.version>24.0.0.3</liberty-runtime.version>
-		<liberty.loose-application>true</liberty.loose-application>
-
-		<!-- https://codehaus-cargo.github.io/cargo/Maven+3+Plugin+Reference+Guide.html -->
-		<!-- https://codehaus-cargo.github.io/cargo/Configuration+properties.html -->
-		<cargo-maven-plugin.version>1.10.12</cargo-maven-plugin.version>
-
-		<cargo-wildfly-runtime>wildfly31x</cargo-wildfly-runtime>
-		<cargo-wildfly-script.dir>${project.basedir}/src/main/wildfly</cargo-wildfly-script.dir>
-
-		<cargo-glassfish-runtime>glassfish7x</cargo-glassfish-runtime>
-
-		<!-- https://tomee.apache.org/master/docs/tomee-maven-plugin.html -->
-		<tomee-maven-plugin.version>10.0.0-M1</tomee-maven-plugin.version>
-		<tomee-runtime.version>10.0.0-M1</tomee-runtime.version>
-
-		<!-- Library support for Open Liberty -->
-		<repo.dir>${user.home}/.m2/repository</repo.dir>
-		<liberty.var.derbypath>${repo.dir}/org/apache/derby/derby/${derby.version}/derby-${derby.version}.jar</liberty.var.derbypath>
-		<liberty.var.derbyclientpath>${repo.dir}/org/apache/derby/derbyclient/${derby.version}/derbyclient-${derby.version}.jar</liberty.var.derbyclientpath>
-		<liberty.var.derbytoolspath>${repo.dir}/org/apache/derby/derbytools/${derby.version}/derbytools-${derby.version}.jar</liberty.var.derbytoolspath>
-		<liberty.var.derbysharedpath>${repo.dir}/org/apache/derby/derbyshared/${derby.version}/derbyshared-${derby.version}.jar</liberty.var.derbysharedpath>
-		<liberty.var.hikaricp>${repo.dir}/com/zaxxer/HikariCP/${hikaricp.version}/HikariCP-${hikaricp.version}.jar</liberty.var.hikaricp>
-		<liberty.var.slf4j>${repo.dir}/org/slf4j/slf4j-api/${slf4j.version}/slf4j-api-${slf4j.version}.jar</liberty.var.slf4j>
-		<liberty.var.datasourceutil>${project.build.directory}/${project.artifactId}-${project.version}-datasource.jar</liberty.var.datasourceutil>
-
-		<!-- Odds and Ends -->
-		<mp-ext-openapi-ui.version>2.0.0</mp-ext-openapi-ui.version>
-		<nimbus.version>9.37.3</nimbus.version>
-
 		<!-- Testing support -->
 		<arquillian.version>1.8.0.Final</arquillian.version>
 		<resteasy.version>6.2.8.Final</resteasy.version>
 	</properties>
 
-	<dependencies>
-		<dependency>
-			<groupId>jakarta.ws.rs</groupId>
-			<artifactId>jakarta.ws.rs-api</artifactId>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>jakarta.servlet</groupId>
-			<artifactId>jakarta.servlet-api</artifactId>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>jakarta.persistence</groupId>
-			<artifactId>jakarta.persistence-api</artifactId>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>jakarta.inject</groupId>
-			<artifactId>jakarta.inject-api</artifactId>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>jakarta.annotation</groupId>
-			<artifactId>jakarta.annotation-api</artifactId>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>jakarta.enterprise</groupId>
-			<artifactId>jakarta.enterprise.cdi-api</artifactId>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>jakarta.security.enterprise</groupId>
-			<artifactId>jakarta.security.enterprise-api</artifactId>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>jakarta.json</groupId>
-			<artifactId>jakarta.json-api</artifactId>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>jakarta.json.bind</groupId>
-			<artifactId>jakarta.json.bind-api</artifactId>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.microprofile.config</groupId>
-			<artifactId>microprofile-config-api</artifactId>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.microprofile.health</groupId>
-			<artifactId>microprofile-health-api</artifactId>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.microprofile.openapi</groupId>
-			<artifactId>microprofile-openapi-api</artifactId>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.microprofile-ext.openapi-ext</groupId>
-			<artifactId>openapi-ui</artifactId>
-			<version>${mp-ext-openapi-ui.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.nimbusds</groupId>
-			<artifactId>nimbus-jose-jwt</artifactId>
-			<version>${nimbus.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.zaxxer</groupId>
-			<artifactId>HikariCP</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.flywaydb</groupId>
-			<artifactId>flyway-core</artifactId>
-			<exclusions>
-				<exclusion>
-					<groupId>com.fasterxml.jackson.dataformat</groupId>
-					<artifactId>jackson-dataformat-toml</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.derby</groupId>
-			<artifactId>derby</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.derby</groupId>
-			<artifactId>derbyclient</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.derby</groupId>
-			<artifactId>derbytools</artifactId>
-		</dependency>
-
-		<!-- ==================================================== -->
-		<!-- Testing Dependencies -->
-		<!-- ==================================================== -->
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.jboss.resteasy</groupId>
-			<artifactId>resteasy-client</artifactId>
-			<version>${resteasy.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.jboss.resteasy</groupId>
-			<artifactId>resteasy-jaxb-provider</artifactId>
-			<version>${resteasy.version}</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.assertj</groupId>
-			<artifactId>assertj-core</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.jayway.jsonpath</groupId>
-			<artifactId>json-path-assert</artifactId>
-			<scope>test</scope>
-		</dependency>
-
-		<!-- Arquillian Container -->
-		<dependency>
-			<groupId>org.jboss.arquillian.junit5</groupId>
-			<artifactId>arquillian-junit5-container</artifactId>
-			<scope>test</scope>
-		</dependency>
-
-		<!-- Embedded Microprofile Container -->
-		<dependency>
-			<groupId>org.apache.tomee</groupId>
-			<artifactId>arquillian-tomee-embedded</artifactId>
-			<version>${tomee-runtime.version}</version>
-			<scope>test</scope>
-			<exclusions>
-				<exclusion>
-					<groupId>org.jboss.arquillian.junit</groupId>
-					<artifactId>arquillian-junit-container</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.tomee</groupId>
-			<artifactId>mp-common</artifactId>
-			<version>${tomee-runtime.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.tomee</groupId>
-			<artifactId>tomee-security</artifactId>
-			<version>${tomee-runtime.version}</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
+	<modules>
+		<module>learn-webservices-jaxrs-server</module>
+		<module>learn-webservices-jaxrs-stubs</module>
+		<module>learn-webservices-jaxrs-client</module>
+	</modules>
 
 	<dependencyManagement>
 		<dependencies>
@@ -252,151 +60,5 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-
-	<profiles>
-		<profile>
-			<id>liberty</id>
-			<build>
-				<plugins>
-					<plugin>
-						<!-- mvn -P liberty liberty:run -->
-						<groupId>io.openliberty.tools</groupId>
-						<artifactId>liberty-maven-plugin</artifactId>
-						<version>${liberty-maven-plugin.version}</version>
-						<configuration>
-							<runtimeArtifact>
-								<groupId>io.openliberty</groupId>
-								<artifactId>openliberty-jakartaee10</artifactId>
-								<version>${liberty-runtime.version}</version>
-								<type>zip</type>
-							</runtimeArtifact>
-							<stripVersion>true</stripVersion>
-							<looseApplication>${liberty.loose-application}</looseApplication>
-							<!-- See server.env for env variables -->
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>wildfly</id>
-			<build>
-				<plugins>
-					<plugin>
-						<!-- mvn -P wildfly cargo:run -->
-						<groupId>org.codehaus.cargo</groupId>
-						<artifactId>cargo-maven3-plugin</artifactId>
-						<version>${cargo-maven-plugin.version}</version>
-						<configuration>
-							<container>
-								<containerId>${cargo-wildfly-runtime}</containerId>
-								<systemProperties>
-									<!-- see wildfly.cli -->
-								</systemProperties>
-							</container>
-							<configuration>
-								<properties>
-									<cargo.start.jvmargs>
-										--add-opens java.base/java.lang=ALL-UNNAMED
-										--add-opens java.base/java.util=ALL-UNNAMED
-										--add-opens java.base/java.io=ALL-UNNAMED
-										--add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED
-									</cargo.start.jvmargs>
-									<cargo.wildfly.script.cli.embedded>${cargo-wildfly-script.dir}/wildfly.cli</cargo.wildfly.script.cli.embedded>
-								</properties>
-							</configuration>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>glassfish</id>
-			<build>
-				<plugins>
-					<plugin>
-						<!-- mvn -P glassfish cargo:run -->
-						<groupId>org.codehaus.cargo</groupId>
-						<artifactId>cargo-maven3-plugin</artifactId>
-						<version>${cargo-maven-plugin.version}</version>
-						<configuration>
-							<container>
-								<containerId>${cargo-glassfish-runtime}</containerId>
-								<systemProperties>
-									<app.greeting>Hello from GlassFish!</app.greeting>
-									<app.profiles.active>local</app.profiles.active>
-								</systemProperties>
-							</container>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>tomee</id>
-			<build>
-				<plugins>
-					<plugin>
-						<!-- mvn -P tomee tomee:run -->
-						<groupId>org.apache.tomee.maven</groupId>
-						<artifactId>tomee-maven-plugin</artifactId>
-						<version>${tomee-maven-plugin.version}</version>
-						<configuration>
-							<tomeeVersion>${tomee-runtime.version}</tomeeVersion>
-							<tomeeClassifier>plus</tomeeClassifier>
-							<args>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.rmi/sun.rmi.transport=ALL-UNNAMED</args>
-							<systemVariables>
-								<app.greeting>Hello from Apache TomEE!</app.greeting>
-								<tomee.mp.scan>all</tomee.mp.scan>
-								<!-- TomEE does not use the usual location -->
-								<mp.openapi.servers>/${project.artifactId}</mp.openapi.servers>
-								<openapi.ui.yamlUrl>/${project.artifactId}/openapi</openapi.ui.yamlUrl>
-								<app.profiles.active>local</app.profiles.active>
-							</systemVariables>
-							<context>${project.artifactId}</context>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
-
-	<build>
-		<plugins>
-			<plugin>
-				<!-- Liberty wants DataSource classes in app server classpath. See server.xml -->
-				<!-- In a real project, you'll re-factor this into modules. -->
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>liberty-dependency</id>
-						<phase>package</phase>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-						<configuration>
-							<classifier>datasource</classifier>
-							<includes>
-								<include>**/*Environment*</include>
-								<include>**/*ExpressionEvaluator*</include>
-								<include>**/*DataSource*</include>
-								<include>**/*Flyway*</include>
-								<include>**/*.properties</include>
-							</includes>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
-
-	<!-- ================================================ -->
-
-	<!-- To run application: -->
-	<!-- mvn -P liberty liberty:run / http://localhost:9080/learn-webservices-jaxrs/index.html -->
-	<!-- mvn -P wildfly cargo:run / http://localhost:8080/learn-webservices-jaxrs/index.html -->
-	<!-- mvn -P glassfish cargo:run / http://localhost:8080/learn-webservices-jaxrs/index.html -->
-	<!-- mvn -P tomee tomee:run / http://localhost:8080/learn-webservices-jaxrs/index.html -->
 
 </project>
